fix: fixed mlflow run name

--- a/mlflow tensorflow logging.ipynb
+++ b/mlflow tensorflow logging.ipynb
@@ -28,26 +28,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<ActiveRun: >"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "mlflow.set_experiment(\"MNIST\")\n",
-    "mlflow.start_run(run_name=\"Run_3\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -202,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +191,7 @@
        "<ActiveRun: >"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,12 +199,12 @@
    "source": [
     "mlflow.tensorflow.autolog(every_n_iter=LOGGING_STEPS)\n",
     "mlflow.set_experiment(EXPERIMENT)\n",
-    "mlflow.start_run(run_name=\"RUN_NAME\")"
+    "mlflow.start_run(run_name=RUN_NAME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -232,33 +212,33 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "469/469 [==============================] - 3s 6ms/step - loss: 0.0040 - accuracy: 0.9987 - val_loss: 0.1284 - val_accuracy: 0.9769\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0030 - accuracy: 0.9991 - val_loss: 0.1587 - val_accuracy: 0.9769\n",
       "Epoch 2/10\n",
-      "469/469 [==============================] - 3s 6ms/step - loss: 0.0020 - accuracy: 0.9995 - val_loss: 0.1192 - val_accuracy: 0.9802\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0034 - accuracy: 0.9987 - val_loss: 0.1509 - val_accuracy: 0.9772\n",
       "Epoch 3/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0043 - accuracy: 0.9988 - val_loss: 0.1323 - val_accuracy: 0.9775\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0037 - accuracy: 0.9988 - val_loss: 0.1334 - val_accuracy: 0.9791\n",
       "Epoch 4/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0083 - accuracy: 0.9973 - val_loss: 0.1401 - val_accuracy: 0.9771\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0055 - accuracy: 0.9983 - val_loss: 0.1597 - val_accuracy: 0.9761\n",
       "Epoch 5/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0041 - accuracy: 0.9987 - val_loss: 0.1271 - val_accuracy: 0.9803\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0052 - accuracy: 0.9985 - val_loss: 0.1457 - val_accuracy: 0.9795\n",
       "Epoch 6/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0030 - accuracy: 0.9991 - val_loss: 0.1442 - val_accuracy: 0.9768\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0011 - accuracy: 0.9997 - val_loss: 0.1423 - val_accuracy: 0.9797\n",
       "Epoch 7/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0022 - accuracy: 0.9993 - val_loss: 0.1435 - val_accuracy: 0.9774\n",
+      "469/469 [==============================] - 2s 4ms/step - loss: 4.8705e-04 - accuracy: 0.9999 - val_loss: 0.1379 - val_accuracy: 0.9806\n",
       "Epoch 8/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0049 - accuracy: 0.9984 - val_loss: 0.1570 - val_accuracy: 0.9755\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 4.2640e-04 - accuracy: 0.9999 - val_loss: 0.1395 - val_accuracy: 0.9797\n",
       "Epoch 9/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0053 - accuracy: 0.9984 - val_loss: 0.1438 - val_accuracy: 0.9787\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0024 - accuracy: 0.9992 - val_loss: 0.1730 - val_accuracy: 0.9753\n",
       "Epoch 10/10\n",
-      "469/469 [==============================] - 3s 5ms/step - loss: 0.0041 - accuracy: 0.9986 - val_loss: 0.1277 - val_accuracy: 0.9788\n",
-      "INFO:tensorflow:Assets written to: C:\\Users\\Susanne\\AppData\\Local\\Temp\\tmpoa1pxu26\\model\\data\\model\\assets\n"
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0140 - accuracy: 0.9958 - val_loss: 0.1475 - val_accuracy: 0.9792\n",
+      "INFO:tensorflow:Assets written to: C:\\Users\\Susanne\\AppData\\Local\\Temp\\tmpo3kr5t0f\\model\\data\\model\\assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\Susanne\\AppData\\Local\\Temp\\tmpoa1pxu26\\model\\data\\model\\assets\n"
+      "INFO:tensorflow:Assets written to: C:\\Users\\Susanne\\AppData\\Local\\Temp\\tmpo3kr5t0f\\model\\data\\model\\assets\n"
      ]
     }
    ],
