--- a/mlflow tensorflow logging.ipynb
+++ b/mlflow tensorflow logging.ipynb
@@ -9,22 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Miniconda\\envs\\tiny_cnn\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import tensorflow_datasets as tfds\n",
-    "import mlflow"
+    "import mlflow\n",
+    "from dotenv import load_dotenv\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Settting up environment variables\n",
+    "\n",
+    "load_dotenv()  \n",
+    "\n",
+    "S3_BUCKET = os.getenv(\"S3_BUCKET\")"
    ]
   },
   {
