feat: adding boto3 for S3 access

--- a/mlflow tensorflow logging.ipynb
+++ b/mlflow tensorflow logging.ipynb
@@ -17,12 +17,13 @@
     "import tensorflow_datasets as tfds\n",
     "import mlflow\n",
     "from dotenv import load_dotenv\n",
-    "import os"
+    "import os\n",
+    "import boto3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +31,33 @@
     "\n",
     "load_dotenv()  \n",
     "\n",
-    "S3_BUCKET = os.getenv(\"S3_BUCKET\")"
+    "S3_BUCKET = os.getenv(\"S3_BUCKET\")\n",
+    "AWS_ACCESS_KEY_ID = os.getenv(\"AWS_ACCESS_KEY_ID\")\n",
+    "AWS_SECRET_ACCESS_KEY = os.getenv(\"AWS_SECRET_ACCESS_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'boto3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mboto3\u001b[49m\u001b[38;5;241m.\u001b[39msetup_default_session(\n\u001b[0;32m      2\u001b[0m     aws_access_key_id\u001b[38;5;241m=\u001b[39mAWS_ACCESS_KEY_ID,\n\u001b[0;32m      3\u001b[0m     aws_secret_access_key\u001b[38;5;241m=\u001b[39mAWS_SECRET_ACCESS_KEY,\n\u001b[0;32m      4\u001b[0m )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'boto3' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "boto3.setup_default_session(\n",
+    "    aws_access_key_id=AWS_ACCESS_KEY_ID,\n",
+    "    aws_secret_access_key=AWS_SECRET_ACCESS_KEY,\n",
+    ")"
    ]
   },
   {
@@ -182,6 +209,7 @@
     "BATCH_SIZE = 128\n",
     "EPOCHS = 10\n",
     "LOGGING_STEPS = 10\n",
+    "\n",
     "EXPERIMENT = \"MNIST\"\n",
     "RUN_NAME = \"Run_4\""
    ]
