--- a/mlflow tensorflow logging.ipynb
+++ b/mlflow tensorflow logging.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Miniconda\\envs\\tiny_cnn\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import tensorflow_datasets as tfds\n",
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,26 +42,15 @@
     "\n",
     "S3_BUCKET = os.getenv(\"S3_BUCKET\")\n",
     "AWS_ACCESS_KEY_ID = os.getenv(\"AWS_ACCESS_KEY_ID\")\n",
-    "AWS_SECRET_ACCESS_KEY = os.getenv(\"AWS_SECRET_ACCESS_KEY\")"
+    "AWS_SECRET_ACCESS_KEY = os.getenv(\"AWS_SECRET_ACCESS_KEY\")\n",
+    "TRACKING_URI = os.getenv(\"TRACKING_URI\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'boto3' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mboto3\u001b[49m\u001b[38;5;241m.\u001b[39msetup_default_session(\n\u001b[0;32m      2\u001b[0m     aws_access_key_id\u001b[38;5;241m=\u001b[39mAWS_ACCESS_KEY_ID,\n\u001b[0;32m      3\u001b[0m     aws_secret_access_key\u001b[38;5;241m=\u001b[39mAWS_SECRET_ACCESS_KEY,\n\u001b[0;32m      4\u001b[0m )\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'boto3' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "boto3.setup_default_session(\n",
     "    aws_access_key_id=AWS_ACCESS_KEY_ID,\n",
@@ -69,51 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1mDownloading and preparing dataset Unknown size (download: Unknown size, generated: Unknown size, total: Unknown size) to ~\\tensorflow_datasets\\mnist\\3.0.1...\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Dl Completed...: 0 url [00:00, ? url/s]\n",
-      "Dl Completed...:   0%|          | 0/1 [00:00<?, ? url/s]\n",
-      "Dl Completed...: 100%|██████████| 1/1 [00:00<00:00, 83.34 url/s]\n",
-      "Dl Completed...: 100%|██████████| 1/1 [00:00<00:00, 55.56 url/s]\n",
-      "Dl Completed...: 100%|██████████| 1/1 [00:00<00:00, 41.67 url/s]\n",
-      "Dl Completed...:  50%|█████     | 1/2 [00:00<00:00, 13.33 url/s]\n",
-      "Dl Completed...: 100%|██████████| 2/2 [00:00<00:00, 24.69 url/s]\n",
-      "Dl Completed...: 100%|██████████| 2/2 [00:00<00:00, 23.26 url/s]\n",
-      "Dl Completed...: 100%|██████████| 2/2 [00:00<00:00, 21.73 url/s]\n",
-      "Dl Completed...:  67%|██████▋   | 2/3 [00:00<00:00, 20.00 url/s]\n",
-      "Dl Completed...: 100%|██████████| 3/3 [00:00<00:00, 28.30 url/s]\n",
-      "Dl Completed...: 100%|██████████| 3/3 [00:00<00:00, 28.30 url/s]\n",
-      "Dl Completed...: 100%|██████████| 3/3 [00:00<00:00, 28.30 url/s]\n",
-      "Dl Completed...:  75%|███████▌  | 3/4 [00:00<00:00, 28.30 url/s]\n",
-      "Dl Completed...: 100%|██████████| 4/4 [00:00<00:00, 28.30 url/s]\n",
-      "Dl Completed...: 100%|██████████| 4/4 [00:00<00:00, 28.30 url/s]\n",
-      "Dl Completed...: 100%|██████████| 4/4 [00:00<00:00, 28.30 url/s]\n",
-      "Extraction completed...: 0 file [00:00, ? file/s]\n",
-      "Dl Size...: 100%|██████████| 11594722/11594722 [00:00<00:00, 70270043.30 MiB/s]\n",
-      "Dl Completed...: 100%|██████████| 4/4 [00:00<00:00, 23.67 url/s]\n",
-      "                                                                        \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1mDataset mnist downloaded and prepared to ~\\tensorflow_datasets\\mnist\\3.0.1. Subsequent calls will reuse this data.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(ds_train, ds_test), ds_info = tfds.load(\n",
     " \"mnist\",\n",
@@ -150,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -211,12 +167,12 @@
     "LOGGING_STEPS = 10\n",
     "\n",
     "EXPERIMENT = \"MNIST\"\n",
-    "RUN_NAME = \"Run_4\""
+    "RUN_NAME = \"Run_6\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -225,20 +181,41 @@
        "<ActiveRun: >"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mlflow.tensorflow.autolog(every_n_iter=LOGGING_STEPS)\n",
+    "mlflow.set_tracking_uri(TRACKING_URI)\n",
     "mlflow.set_experiment(EXPERIMENT)\n",
     "mlflow.start_run(run_name=RUN_NAME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://ec2-18-194-137-129.eu-central-1.compute.amazonaws.com:5000'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlflow.get_tracking_uri()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -246,33 +223,47 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0030 - accuracy: 0.9991 - val_loss: 0.1587 - val_accuracy: 0.9769\n",
-      "Epoch 2/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0034 - accuracy: 0.9987 - val_loss: 0.1509 - val_accuracy: 0.9772\n",
-      "Epoch 3/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0037 - accuracy: 0.9988 - val_loss: 0.1334 - val_accuracy: 0.9791\n",
-      "Epoch 4/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0055 - accuracy: 0.9983 - val_loss: 0.1597 - val_accuracy: 0.9761\n",
-      "Epoch 5/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0052 - accuracy: 0.9985 - val_loss: 0.1457 - val_accuracy: 0.9795\n",
-      "Epoch 6/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0011 - accuracy: 0.9997 - val_loss: 0.1423 - val_accuracy: 0.9797\n",
-      "Epoch 7/10\n",
-      "469/469 [==============================] - 2s 4ms/step - loss: 4.8705e-04 - accuracy: 0.9999 - val_loss: 0.1379 - val_accuracy: 0.9806\n",
-      "Epoch 8/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 4.2640e-04 - accuracy: 0.9999 - val_loss: 0.1395 - val_accuracy: 0.9797\n",
-      "Epoch 9/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0024 - accuracy: 0.9992 - val_loss: 0.1730 - val_accuracy: 0.9753\n",
-      "Epoch 10/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0140 - accuracy: 0.9958 - val_loss: 0.1475 - val_accuracy: 0.9792\n",
-      "INFO:tensorflow:Assets written to: C:\\Users\\Susanne\\AppData\\Local\\Temp\\tmpo3kr5t0f\\model\\data\\model\\assets\n"
+      "  1/469 [..............................] - ETA: 32s - loss: 0.0103 - accuracy: 0.9922WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0026s vs `on_train_batch_end` time: 0.0039s). Check your callbacks.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\Susanne\\AppData\\Local\\Temp\\tmpo3kr5t0f\\model\\data\\model\\assets\n"
+      "WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0026s vs `on_train_batch_end` time: 0.0039s). Check your callbacks.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0162 - accuracy: 0.9949 - val_loss: 0.0886 - val_accuracy: 0.9753\n",
+      "Epoch 2/10\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0140 - accuracy: 0.9959 - val_loss: 0.0845 - val_accuracy: 0.9772\n",
+      "Epoch 3/10\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0112 - accuracy: 0.9968 - val_loss: 0.0946 - val_accuracy: 0.9765\n",
+      "Epoch 4/10\n",
+      "469/469 [==============================] - 3s 5ms/step - loss: 0.0092 - accuracy: 0.9974 - val_loss: 0.0917 - val_accuracy: 0.9758\n",
+      "Epoch 5/10\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0091 - accuracy: 0.9975 - val_loss: 0.0955 - val_accuracy: 0.9778\n",
+      "Epoch 6/10\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0102 - accuracy: 0.9967 - val_loss: 0.0896 - val_accuracy: 0.9775\n",
+      "Epoch 7/10\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0083 - accuracy: 0.9973 - val_loss: 0.1082 - val_accuracy: 0.9752\n",
+      "Epoch 8/10\n",
+      "469/469 [==============================] - 3s 5ms/step - loss: 0.0062 - accuracy: 0.9981 - val_loss: 0.0938 - val_accuracy: 0.9779\n",
+      "Epoch 9/10\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0082 - accuracy: 0.9975 - val_loss: 0.0952 - val_accuracy: 0.9792\n",
+      "Epoch 10/10\n",
+      "469/469 [==============================] - 3s 5ms/step - loss: 0.0055 - accuracy: 0.9984 - val_loss: 0.1023 - val_accuracy: 0.9788\n",
+      "INFO:tensorflow:Assets written to: C:\\Users\\Susanne\\AppData\\Local\\Temp\\tmpp69vheeo\\model\\data\\model\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: C:\\Users\\Susanne\\AppData\\Local\\Temp\\tmpp69vheeo\\model\\data\\model\\assets\n"
      ]
     }
    ],
