--- a/mlflow tensorflow logging.ipynb
+++ b/mlflow tensorflow logging.ipynb
@@ -9,24 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Miniconda\\envs\\tiny_cnn\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import tensorflow_datasets as tfds\n",
     "import mlflow\n",
     "from dotenv import load_dotenv\n",
-    "import os\n",
+    "import os, datetime\n",
     "import boto3"
    ]
   },
@@ -106,14 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the layers\n",
     "inputs = tf.keras.Input(shape=(28, 28, 1))\n",
     "hidden = tf.keras.layers.Flatten()(inputs)\n",
-    "hidden2 = tf.keras.layers.Dense(128, activation=\"relu\")(hidden)\n",
+    "hidden2 = tf.keras.layers.Dense(64, activation=\"relu\")(hidden)\n",
     "outputs = tf.keras.layers.Dense(10, activation=\"softmax\")(hidden2)\n",
     "# Optimizer\n",
     "opt = tf.keras.optimizers.Adam(learning_rate=0.002)\n",
@@ -125,28 +116,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model\"\n",
+      "Model: \"model_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_1 (InputLayer)        [(None, 28, 28, 1)]       0         \n",
+      " input_2 (InputLayer)        [(None, 28, 28, 1)]       0         \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 784)               0         \n",
+      " flatten_1 (Flatten)         (None, 784)               0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 128)               100480    \n",
+      " dense_2 (Dense)             (None, 64)                50240     \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 10)                1290      \n",
+      " dense_3 (Dense)             (None, 10)                650       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 101,770\n",
-      "Trainable params: 101,770\n",
+      "Total params: 50,890\n",
+      "Trainable params: 50,890\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -158,21 +149,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "BATCH_SIZE = 128\n",
-    "EPOCHS = 10\n",
+    "EPOCHS = 20\n",
     "LOGGING_STEPS = 10\n",
     "\n",
+    "MODELNAME = \"Simple_Net\"\n",
     "EXPERIMENT = \"MNIST\"\n",
-    "RUN_NAME = \"Run_6\""
+    "RUN_NAME = \"Run_8\"\n",
+    "\n",
+    "logdir = os.path.join(\"logs\", MODELNAME, datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'logs\\\\Simple_Net\\\\20221003-194940'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logdir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +195,7 @@
        "<ActiveRun: >"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,82 +209,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http://ec2-18-194-137-129.eu-central-1.compute.amazonaws.com:5000'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mlflow.get_tracking_uri()"
+    "# Tensorflow Callbacks\n",
+    "\n",
+    "tensorboard_callback = tf.keras.callbacks.TensorBoard(logdir, histogram_freq=1)\n",
+    "checkpoint = tf.keras.callbacks.ModelCheckpoint(MODELNAME, save_weights_only=True)\n",
+    "early_stopping = tf.keras.callbacks.EarlyStopping(monitor='val_loss', \n",
+    "                                min_delta=0, \n",
+    "                                patience=4, \n",
+    "                                verbose=0, \n",
+    "                                mode='auto', \n",
+    "                                restore_best_weights=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "  1/469 [..............................] - ETA: 32s - loss: 0.0103 - accuracy: 0.9922WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0026s vs `on_train_batch_end` time: 0.0039s). Check your callbacks.\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0026s vs `on_train_batch_end` time: 0.0039s). Check your callbacks.\n"
+      "2022/10/03 19:50:46 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'bd5cf2f1a5624becb30020055b86e6f5', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current tensorflow workflow\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0162 - accuracy: 0.9949 - val_loss: 0.0886 - val_accuracy: 0.9753\n",
-      "Epoch 2/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0140 - accuracy: 0.9959 - val_loss: 0.0845 - val_accuracy: 0.9772\n",
-      "Epoch 3/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0112 - accuracy: 0.9968 - val_loss: 0.0946 - val_accuracy: 0.9765\n",
-      "Epoch 4/10\n",
-      "469/469 [==============================] - 3s 5ms/step - loss: 0.0092 - accuracy: 0.9974 - val_loss: 0.0917 - val_accuracy: 0.9758\n",
-      "Epoch 5/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0091 - accuracy: 0.9975 - val_loss: 0.0955 - val_accuracy: 0.9778\n",
-      "Epoch 6/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0102 - accuracy: 0.9967 - val_loss: 0.0896 - val_accuracy: 0.9775\n",
-      "Epoch 7/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0083 - accuracy: 0.9973 - val_loss: 0.1082 - val_accuracy: 0.9752\n",
-      "Epoch 8/10\n",
-      "469/469 [==============================] - 3s 5ms/step - loss: 0.0062 - accuracy: 0.9981 - val_loss: 0.0938 - val_accuracy: 0.9779\n",
-      "Epoch 9/10\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0082 - accuracy: 0.9975 - val_loss: 0.0952 - val_accuracy: 0.9792\n",
-      "Epoch 10/10\n",
-      "469/469 [==============================] - 3s 5ms/step - loss: 0.0055 - accuracy: 0.9984 - val_loss: 0.1023 - val_accuracy: 0.9788\n",
-      "INFO:tensorflow:Assets written to: C:\\Users\\Susanne\\AppData\\Local\\Temp\\tmpp69vheeo\\model\\data\\model\\assets\n"
+      "Epoch 1/20\n",
+      "  1/469 [..............................] - ETA: 3:21 - loss: 0.0079 - accuracy: 1.0000WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0029s vs `on_train_batch_end` time: 0.0651s). Check your callbacks.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\Susanne\\AppData\\Local\\Temp\\tmpp69vheeo\\model\\data\\model\\assets\n"
+      "WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0029s vs `on_train_batch_end` time: 0.0651s). Check your callbacks.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "469/469 [==============================] - 4s 7ms/step - loss: 0.0156 - accuracy: 0.9955 - val_loss: 0.0941 - val_accuracy: 0.9744\n",
+      "Epoch 2/20\n",
+      "469/469 [==============================] - 4s 8ms/step - loss: 0.0148 - accuracy: 0.9955 - val_loss: 0.0946 - val_accuracy: 0.9741\n",
+      "Epoch 3/20\n",
+      "469/469 [==============================] - 4s 8ms/step - loss: 0.0128 - accuracy: 0.9966 - val_loss: 0.0978 - val_accuracy: 0.9742\n",
+      "Epoch 4/20\n",
+      "469/469 [==============================] - 4s 8ms/step - loss: 0.0127 - accuracy: 0.9963 - val_loss: 0.0960 - val_accuracy: 0.9757\n",
+      "Epoch 5/20\n",
+      "469/469 [==============================] - 3s 6ms/step - loss: 0.0103 - accuracy: 0.9970 - val_loss: 0.1040 - val_accuracy: 0.9766\n",
+      "INFO:tensorflow:Assets written to: C:\\Users\\Susanne\\AppData\\Local\\Temp\\tmp80ud2dr4\\model\\data\\model\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: C:\\Users\\Susanne\\AppData\\Local\\Temp\\tmp80ud2dr4\\model\\data\\model\\assets\n"
      ]
     }
    ],
    "source": [
     "history = model.fit(ds_train, epochs=EPOCHS, validation_data=ds_test,\n",
     "    batch_size=BATCH_SIZE,\n",
-    "    use_multiprocessing = True)\n",
+    "    use_multiprocessing = True,\n",
+    "    callbacks = [tensorboard_callback, checkpoint, early_stopping])\n",
     "mlflow.end_run()"
    ]
   },
@@ -291,9 +301,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('tiny_cnn')",
+   "display_name": "tiny_cnn",
    "language": "python",
-   "name": "python3"
+   "name": "tiny_cnn"
   },
   "language_info": {
    "codemirror_mode": {
